# kNN

./: CMakeLists.txt  CSVReader.cpp  CSVReader.h  CrossValidation.cpp  CrossValidation.h  CrossValidator.cpp  CrossValidator.h  Geometry.cpp  Geometry.h  KDTree.cpp  KDTree.h  KDTreePreparation.cpp  KDTreePreparation.h  KDTreeTest.cpp  KFold.cpp  KFold.h  README.md  Statistics.cpp  Statistics.h  kdtree.cpp  kdtree.h  main.cpp
